--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
+    "express": "^4.17.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
