--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
     "express": "^4.17.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-headful": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
